feat(assets): nesting assets
